--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -72,19 +72,21 @@
       const response = await fetch('/login', {
         method: 'POST',
         headers: {
-          'Content-Type': 'application/x-www-form-urlencoded',
+          'Content-Type': 'application/x-www-form-urlencoded'
         },
         body: `username=${encodeURIComponent(username)}&password=${encodeURIComponent(password)}`,
         credentials: 'include'
       });
 
-      if (response.ok) {
+      if (response.redirected) {
+        window.location.href = response.url;
+      } else if (response.ok) {
         window.location.href = '/';
       } else {
-        document.getElementById('error-message').textContent = 'Invalid credentials';
+        document.getElementById('error-message').textContent = 'Неверные данные';
       }
     } catch (error) {
-      document.getElementById('error-message').textContent = 'Login failed';
+      document.getElementById('error-message').textContent = 'Ошибка входа';
     }
   });
 </script>
