--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -1,94 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Login</title>
+  <title>Вход в систему</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-    }
-    .login-form {
-      width: 300px;
+    .login-container {
+      max-width: 400px;
+      margin: 100px auto;
       padding: 20px;
       border: 1px solid #ddd;
       border-radius: 5px;
-    }
-    .form-group {
-      margin-bottom: 15px;
-    }
-    .form-group label {
-      display: block;
-      margin-bottom: 5px;
-    }
-    .form-group input {
-      width: 100%;
-      padding: 8px;
-      box-sizing: border-box;
-    }
-    button {
-      width: 100%;
-      padding: 10px;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      cursor: pointer;
-    }
-    .error {
-      color: red;
-      margin-top: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
   </style>
 </head>
 <body>
-<div class="login-form">
-  <h2>Login</h2>
-  <form id="loginForm">
-    <div class="form-group">
-      <label for="username">Username:</label>
-      <input type="text" id="username" required>
+<div class="container">
+  <div class="login-container">
+    <h2 class="text-center mb-4">Вход в систему</h2>
+
+    <!-- Сообщение об ошибке -->
+    <div th:if="${param.error}" class="alert alert-danger">
+      Неверное имя пользователя или пароль
     </div>
-    <div class="form-group">
-      <label for="password">Password:</label>
-      <input type="password" id="password" required>
+
+    <!-- Сообщение о выходе -->
+    <div th:if="${param.logout}" class="alert alert-success">
+      Вы успешно вышли из системы
     </div>
-    <button type="submit">Login</button>
-    <div id="error-message" class="error"></div>
-  </form>
+
+    <form th:action="@{/login}" method="post">
+      <div class="mb-3">
+        <label for="username" class="form-label">Имя пользователя</label>
+        <input type="text" class="form-control" id="username" name="username" required>
+      </div>
+      <div class="mb-3">
+        <label for="password" class="form-label">Пароль</label>
+        <input type="password" class="form-control" id="password" name="password" required>
+      </div>
+      <button type="submit" class="btn btn-primary w-100">Войти</button>
+    </form>
+  </div>
 </div>
 
-<script>
-  document.getElementById('loginForm').addEventListener('submit', async (e) => {
-    e.preventDefault();
-
-    const username = document.getElementById('username').value;
-    const password = document.getElementById('password').value;
-
-    try {
-      const response = await fetch('/login', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/x-www-form-urlencoded'
-        },
-        body: `username=${encodeURIComponent(username)}&password=${encodeURIComponent(password)}`,
-        credentials: 'include'
-      });
-
-      if (response.redirected) {
-        window.location.href = response.url;
-      } else if (response.ok) {
-        window.location.href = '/';
-      } else {
-        document.getElementById('error-message').textContent = 'Неверные данные';
-      }
-    } catch (error) {
-      document.getElementById('error-message').textContent = 'Ошибка входа';
-    }
-  });
-</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
